--- a/ratp-pwa-master-guflorezm/index.html
+++ b/ratp-pwa-master-guflorezm/index.html
@@ -23,7 +23,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paris Métro 1</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
+  <link rel="manifest" href="/manifest.json">
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="TimeMetroPWA">
+  
+  <meta name="msapplication-TileColor" content="#2F3BA2">  
+  
 </head>
 <body>
 
@@ -92,6 +99,7 @@
   </div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
+   <!--<script src="node_modules/idb/lib/idb.js"></script>-->
   <script src="scripts/app.js" async></script>
 
 </body>
