--- a/ratp-pwa-master-guflorezm/index.html
+++ b/ratp-pwa-master-guflorezm/index.html
@@ -22,6 +22,7 @@
   <link rel="canonical" href="https://weather-pwa-sample.firebaseapp.com/final/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paris Métro 1</title>
+  <meta name="theme-color" content="#2F3BA2">
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
   <link rel="manifest" href="/manifest.json">
 
